// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render panelHeader 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 72,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with subtitle 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 36,
                  "lineHeight": 48,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with title 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#444B5A",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 48,
                  "lineHeight": 60,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader without props 1`] = `
<View
  style={
    [
      {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 180,
            "justifyContent": "space-between",
            "paddingHorizontal": 60,
            "paddingVertical": 30,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 24,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        />
      </View>
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 288,
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;
